--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -157,7 +157,7 @@
   --lemon: rgb(254,254,34);
   position: absolute;
   top: 107vmin;
-    right: 20vmin;
+  right: 25vmin;
   perspective: 1000px;
   perspective-origin: center -5em;
   z-index:500;
@@ -185,14 +185,6 @@
       transform: translateY(0px) rotate(0deg);
       transform-origin: bottom;
     }
-  }
-}
-
-@media(min-width:780px) {
-  .gift {
-    position: absolute;
-    top: 45vmin;
-    right: 20vmin;
   }
 }
 .box__side,
@@ -488,11 +480,14 @@
     left: -4%;
   }
 }
+
 .tree { 
-  width: 30em;
+  width: 50vmin;
+  height: 50vmin;
+  position: absolute;
   transform: translateY(-250%);
-  top: 4em;
-  left: 25em;
+  top: 4vmax;
+  left: 10vmax;
 
   &__leaves,
   &__trunk {
@@ -502,50 +497,34 @@
     position: relative;
     width: 0;
     height: 0;
-    border-left: 80px solid transparent;
-    border-right: 80px solid transparent;
-    border-bottom: 100px solid rgb(1, 141, 1);
-    border-radius:40px;
+    border-left: 13vmin solid transparent;
+    border-right: 13vmin solid transparent;
+    border-bottom: 18vmin solid rgb(1, 141, 1);
+    border-radius: 20vmin;
     z-index:22;
 }
   &__leaves:nth-child(2) {
     position: relative;
-    margin-top: -30px;
-    border-left-width: 90px;
-    border-right-width: 90px;
-    border-bottom-width: 120px;
-    border-bottom: 115px solid rgb(2, 121, 2);
+    margin-top: -5vmin;
+    border-left-width: 15vmin;
+    border-right-width: 15vmin;
+    border-bottom: 20vmin solid rgb(2, 121, 2);
     z-index: 21;
 }
 
   &__leaves:nth-child(3) {
     position: relative;
-    margin-top: -20px;
-    border-left-width: 120px;
-    border-right-width: 120px;
-    border-bottom-width: 160px;
-    border-bottom: 130px solid rgb(1, 88, 1);
+    margin-top: -7vmin;
+    border-left-width: 21vmin;
+    border-right-width: 25vmin;
+    border-bottom-width: 39vmin;
+    border-bottom: 25vmin solid rgb(1, 88, 1);
     z-index: 19;
 }
-  &__leaves:nth-child(3)::after {
-    content: "";
-    position: absolute;
-    border-radius: 30%;
-    background-color: black;
-    opacity: 0.5;
-    width: 127px;
-    height: 30px;
-    top: 10em;
-    left: -5em;
-    z-index: 17;
-    opacity:0;
-    animation: isVisible 2s 5s ease-in-out forwards;
-  }
-
   &__trunk {
     position: relative;
-    width: 40px;
-    height: 45px;
+    width: 4vmin;
+    height: 5vmin;
     background-color: rgb(80, 38, 8);
     border: 2px solid black;
     z-index: 19;
@@ -555,7 +534,7 @@
 .background {
   transform: translateX(0);
   opacity:1;
-  width: 1500px;
+  width: 150%;
   height: 100vh;
   padding: 0;
   margin:0;
@@ -689,7 +668,6 @@
   &__container {
     text-align: center;
     white-space: nowrap;
-    overflow: hidden;
     position: absolute;
     top: 130px;
     padding: 0;
@@ -698,7 +676,6 @@
     z-index: 5000;
   }
 }
-
 .lightrope-wall__container li {
   position: relative;
   animation-fill-mode: both;
@@ -707,14 +684,15 @@
   margin: 0;
   padding: 0;
   display: inline-block;
-  width: 25px;
-  height: 25px;
+  width: 5vmin;
+  height: 5vmin;
   border-radius: 50%;
-  margin: 20px;
+  margin: 12px;
   background: var(--dark-blue);
   box-shadow: 0px 4.66667px 24px 3px var(--dark-blue);
   animation: flash-1 2s infinite;
 }
+
 .lightrope-wall__container li:nth-child(2n+1) {
   background: var(--green);
   box-shadow: 0px 4.66667px 24px 3px var(--green);
@@ -735,18 +713,18 @@
   content: "";
   position: absolute;
   background: #222;
-  width: 10px;
-  height: 9.33333px;
-  border-radius: 3px;
-  top: -7px;
-  left: 7px;
+  width: 2vmin;
+    height: 1vmin;
+    border-radius: 3px;
+    top: -7px;
+    left: 1.5vmin;
 }
 .lightrope-wall__container li:after {
   content: "";
   top: -15px;
-  left: 19px;
-  position: absolute;
-  width: 52px;
+    left: 4vmin;
+    position: absolute;
+    width: 7vmin;
   height: 16px;
   border-bottom: solid #222 2px;
   border-radius: 50%;
@@ -788,4 +766,160 @@
       box-shadow: 0px 4.66667px 24px 3px var(--red-light);
     }
 }
-  
+
+@media (min-width: 1200px) {
+  .tree { 
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    transform: translateY(-250%);
+    top: 4vmax;
+    left: 10vmax;
+  }
+  .santa {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    top: 28vmin;
+    left: 14vmin;
+  }
+  @media(min-width:780px) {
+    .gift {
+      position: absolute;
+      top: 45vmin;
+      right: 20vmin;
+    }
+  }
+  }
+  @media (min-width: 992px) and (max-width: 1199px) {
+  .tree { 
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    transform: translateY(-250%);
+    top: 2vmax;
+    left: 35vmax;
+  }
+  .santa {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    top: 28vmin;
+    left: 14vmin;
+  }
+  .lightrope-tree {
+    -webkit-transform: translateY(-250%);
+    transform: translateY(-250%);
+    left: 62vmin;
+    top: 17vmin;
+    opacity: 1;
+  }
+  @media(min-width:780px) {
+    .gift {
+      position: absolute;
+      top: 45vmin;
+      right: 20vmin;
+    }
+  }
+  }
+  @media (min-width: 768px) and (max-width: 991px) {
+  .tree { 
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    transform: translateY(-250%);
+    top: -5vmin;
+    left: 43vmin;
+  }
+  .santa {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    top: 22vmin;
+    left: 14vmin;
+  }
+  .lightrope-wall__container li {
+      position: relative;
+      animation-fill-mode: both;
+      animation-iteration-count: infinite;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+      width: 5vmin;
+      height: 5vmin;
+      border-radius: 50%;
+      margin: 12px;
+      background: var(--dark-blue);
+      box-shadow: 0px 4.66667px 24px 3px var(--dark-blue);
+      animation: flash-1 2s infinite;
+  }
+  .lightrope-tree {
+    -webkit-transform: translateY(-250%);
+    transform: translateY(-250%);
+    left: 60vmin;
+    top: 10vmin;
+    opacity: 1;
+  }.gift {
+      position: absolute;
+      top: 45vmin;
+      right: 20vmin;
+    }
+}
+  @media (max-width: 767px) {
+  .tree { 
+    width: 50vmin;
+      height: 50vmin;
+      position: absolute;
+      -webkit-transform: translateY(-250%);
+      transform: translateY(-250%);
+      top: -2vmax;
+      left: 33vmax;
+  }
+  .santa {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    top: 25vmin;
+    left: 14vmin;
+  }
+  .lightrope-tree {
+    transform: translateY(-250%);
+    left: 55vmin;
+    top: 7vmin;
+    opacity: 1;
+  }
+    .gift {
+      position: absolute;
+      top: 88vmin;
+      right: 21vmin;
+    }
+  }
+  @media (max-width: 480px) {
+  .tree { 
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    transform: translateY(-250%);
+    top: 10vmin;
+    left: 35vmin;
+  }
+  .santa {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    top: 35vmin;
+    left: 14vmin;
+  }
+  .lightrope-tree {
+    transform: translateY(-250%);
+    left: 47vmin;
+    top: 10vmin;
+    opacity: 1;
+  }
+    .gift {
+      position: absolute;
+      top: 100vmin;
+      right: 20vmin;
+    }
+}
