--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -55,9 +55,11 @@
 
 //Кнопка
 .buttons__home {
+  position: relative;
+  z-index: 1000;
   width: 20em;
   height: 3em;
-  right: 60px;
+  right: 2vmin;
   transform: translateY(0px);
   animation: 
     jumping 3s 6s ease-in-out forwards, 
@@ -78,19 +80,19 @@
       transform: translateY(0%);
     }
     20% {
-      transform: translateY(800px);
-    }
-    40% {
       transform: translateY(400px);
     }
+    40% {
+      transform: translateY(200px);
+    }
     60% {
-      transform: translateY(600px);
+      transform: translateY(400px);
     }
     80% {
       transform: translateY(300px);
     }
     100% {
-      transform: translateY(800px) rotate(360deg);
+      transform: translateY(400px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -123,7 +125,7 @@
     }
     &:nth-child(2) //santa 
     {
-      z-index: 90;
+      z-index: 1;
       animation: start 2s 1s ease-in-out forwards;
     }
     &:nth-child(3) //background
@@ -133,12 +135,12 @@
     }
     &:nth-child(4) //tree
     {
-      z-index: 100;
+      z-index: 1;
       animation: toBottom 2s 1s ease-in-out forwards;
     }
     &:nth-child(5) //tree-light
     {
-      z-index: 110;
+      z-index: 1;
       animation: toBottom 2s 1s ease-in-out forwards;
     }
     &:nth-child(6) //light-wall
@@ -189,8 +191,8 @@
 }
 .box__side,
 .gift__container {
-  width: 10vmin;
-  height: 10vmin;
+  width: 6em;
+  height: 6em;
 }
 
 .gift__container {
@@ -201,35 +203,33 @@
 
 .box__side {
   position: absolute;
-  width: 8em;
-  height: 8em;;
   }
 .box__back {
-  transform: translateZ(-4em);
+  transform: translateZ(-3em);
   background: linear-gradient(90deg,var(--yellow) 0%, var(--yellow) 38%, var(--dark-red) 39%, var(--red) 40%, var(--red) 52%, var(--dark-red) 53%, var(--yellow) 54%, var(--yellow) 100%);;
 }
 .box__left {
-  transform: translateX(-4em) rotateY(90deg);
+  transform: translateX(-3em) rotateY(90deg);
   background: linear-gradient(90deg, var(--yellow) 0%, var(--yellow) 38%, var(--dark-red) 39%, var(--red) 40%, var(--red) 52%, var(--dark-red) 53%, var(--yellow) 54%, var(--yellow) 100%);;
   
   }
 .box__right {
-  transform: translateX(4em) rotateY(90deg);
+  transform: translateX(3em) rotateY(90deg);
   background: linear-gradient(90deg, var(--yellow) 0%, var(--yellow) 38%, var(--dark-red) 39%, var(--red) 40%, var(--red) 52%, var(--dark-red) 53%, var(--yellow) 54%, var(--yellow) 100%);;
   }
 .box__top {
-  transform: translateY(-4em) rotateX(90deg);
+  transform: translateY(-3em) rotateX(90deg);
   background-color: var(--yellow-light);
   background: 
     linear-gradient(90deg, rgba(255,244,0,0) 0%, rgba(254,254,0,0) 41%, var(--dark-red) 43%, var(--red) 45%, var(--red) 55%, var(--dark-red) 59%, rgba(254,254,0,0) 60%, rgba(255,244,0,0) 100%),
     linear-gradient(180deg, var(--yellow-light) 0%, var(--yellow-light) 40%, var(--dark-red) 43%, var(--red) 45%,var(--red) 55%, var(--dark-red) 59%, var(--yellow-light) 60%, var(--yellow-light) 100%);
   }
 .box__bottom {
-  transform: translateY(4em) rotateX(90deg);
+  transform: translateY(3em) rotateX(90deg);
   background: $box-2;
   }
 .box__front {
-  transform: translateZ(4em);
+  transform: translateZ(3em);
   background: var(--lemon);
   background: linear-gradient(90deg, var(--lemon) 0%, var(--lemon) 38%, var(--dark-red) 39%, var(--red) 40%, var(--red) 52%, var(--dark-red) 53%, var(--lemon) 54%, var(--lemon) 100%);
 }
@@ -774,7 +774,7 @@
     position: absolute;
     transform: translateY(-250%);
     top: 4vmax;
-    left: 10vmax;
+    left: 40vmin;
   }
   .santa {
     width: 50vmin;
@@ -783,13 +783,11 @@
     top: 28vmin;
     left: 14vmin;
   }
-  @media(min-width:780px) {
-    .gift {
+   .gift {
       position: absolute;
-      top: 45vmin;
+      top: 69vmin;
       right: 20vmin;
     }
-  }
   }
   @media (min-width: 992px) and (max-width: 1199px) {
   .tree { 
@@ -797,14 +795,14 @@
     height: 50vmin;
     position: absolute;
     transform: translateY(-250%);
-    top: 2vmax;
-    left: 35vmax;
+    top: 10vmin;
+    left: 25vmax;
   }
   .santa {
     width: 50vmin;
     height: 50vmin;
     position: absolute;
-    top: 28vmin;
+    top: 35vmin;
     left: 14vmin;
   }
   .lightrope-tree {
@@ -814,28 +812,78 @@
     top: 17vmin;
     opacity: 1;
   }
-  @media(min-width:780px) {
-    .gift {
+  .gift {
       position: absolute;
-      top: 45vmin;
-      right: 20vmin;
+      top: 68vmin;
+      right: 22vmin;
+    }
+    .buttons__home {
+      width: 20em;
+      height: 3em;
+      right: 2vmin;
+      transform: translateY(0px);
+      animation: 
+        jumping 3s 6s ease-in-out forwards, 
+        lighting 3s 7s ease-in-out infinite;
+      @keyframes lighting {
+        0% {
+          background-color:$wave-2;
+        }
+        50% {
+          background: $wave-3;
+        }
+        100% {
+          background-color:$wave-2;
+        }
+      }
+      @keyframes jumping {
+        0% {
+          transform: translateY(0%);
+        }
+        20% {
+          transform: translateY(400px);
+        }
+        40% {
+          transform: translateY(200px);
+        }
+        60% {
+          transform: translateY(400px);
+        }
+        80% {
+          transform: translateY(300px);
+        }
+        100% {
+          transform: translateY(620px) rotate(360deg);
+          width: 35vmin;
+          height: 10vmin;
+        }
+      }
+    
+      &::after {
+      position:absolute;
+      content:'Адвент-календарь';
+      top:5px;
+      left:36px;
+      font-size: 18px;
+      opacity: 0;
+      }
     }
   }
-  }
+
   @media (min-width: 768px) and (max-width: 991px) {
   .tree { 
     width: 50vmin;
     height: 50vmin;
     position: absolute;
     transform: translateY(-250%);
-    top: -5vmin;
+    top: 1vmin;
     left: 43vmin;
   }
   .santa {
     width: 50vmin;
     height: 50vmin;
     position: absolute;
-    top: 22vmin;
+    top: 30vmin;
     left: 14vmin;
   }
   .lightrope-wall__container li {
@@ -860,10 +908,62 @@
     left: 60vmin;
     top: 10vmin;
     opacity: 1;
-  }.gift {
+  }
+  .gift {
       position: absolute;
-      top: 45vmin;
-      right: 20vmin;
+      top: 67vmin;
+      right: 15vmin;
+    }
+    .buttons__home {
+      width: 20em;
+      height: 3em;
+      right: 2vmin;
+      transform: translateY(0px);
+      animation: 
+        jumping 3s 6s ease-in-out forwards, 
+        lighting 3s 7s ease-in-out infinite;
+      @keyframes lighting {
+        0% {
+          background-color:$wave-2;
+        }
+        50% {
+          background: $wave-3;
+        }
+        100% {
+          background-color:$wave-2;
+        }
+      }
+      @keyframes jumping {
+        0% {
+          transform: translateY(0%);
+        }
+        20% {
+          transform: translateY(400px);
+        }
+        40% {
+          transform: translateY(200px);
+        }
+        60% {
+          transform: translateY(400px);
+        }
+        80% {
+          transform: translateY(300px);
+        }
+        100% {
+          transform: translateY(600px) rotate(360deg);
+          width: 35vmin;
+          height: 10vmin;
+        }
+      }
+    
+      &::after {
+      position:absolute;
+      content:'Адвент-календарь';
+      top:5px;
+      left:36px;
+      font-size: 18px;
+      opacity: 0;
+      }
     }
 }
   @media (max-width: 767px) {
@@ -873,14 +973,14 @@
       position: absolute;
       -webkit-transform: translateY(-250%);
       transform: translateY(-250%);
-      top: -2vmax;
+      top: 3vmax;
       left: 33vmax;
   }
   .santa {
     width: 50vmin;
     height: 50vmin;
     position: absolute;
-    top: 25vmin;
+    top: 30vmin;
     left: 14vmin;
   }
   .lightrope-tree {
@@ -891,9 +991,133 @@
   }
     .gift {
       position: absolute;
-      top: 88vmin;
-      right: 21vmin;
+      top: 73vmin;
+      right: 15vmin;
     }
+    .buttons__home {
+      width: 20em;
+      height: 3em;
+      right: 2vmin;
+      transform: translateY(0px);
+      animation: 
+        jumping 3s 6s ease-in-out forwards, 
+        lighting 3s 7s ease-in-out infinite;
+      @keyframes lighting {
+        0% {
+          background-color:$wave-2;
+        }
+        50% {
+          background: $wave-3;
+        }
+        100% {
+          background-color:$wave-2;
+        }
+      }
+      @keyframes jumping {
+        0% {
+          transform: translateY(0%);
+        }
+        20% {
+          transform: translateY(400px);
+        }
+        40% {
+          transform: translateY(200px);
+        }
+        60% {
+          transform: translateY(400px);
+        }
+        80% {
+          transform: translateY(300px);
+        }
+        100% {
+          transform: translateY(600px) rotate(360deg);
+          width: 35vmin;
+          height: 10vmin;
+        }
+      }
+    
+      &::after {
+      position:absolute;
+      content:'Адвент-календарь';
+      top:5px;
+      left:36px;
+      font-size: 18px;
+      opacity: 0;
+      }
+    }
+  }
+  @media(max-width:650px) {
+      .tree { 
+        width: 50vmin;
+          height: 50vmin;
+          position: absolute;
+          transform: translateY(-250%);
+          top: 16vmin;
+          left: 38vmin;
+      }
+      .santa {
+        width: 50vmin;
+        height: 50vmin;
+        position: absolute;
+        top: 40vmin;
+        left: 14vmin;
+      }
+      .gift {
+        position: absolute;
+        top: 93vmin;
+        right: 72vmin;
+      }
+      .buttons__home {
+        width: 20em;
+        height: 3em;
+        right: 2vmin;
+        transform: translateY(0px);
+        animation: 
+          jumping 3s 6s ease-in-out forwards, 
+          lighting 3s 7s ease-in-out infinite;
+        @keyframes lighting {
+          0% {
+            background-color:$wave-2;
+          }
+          50% {
+            background: $wave-3;
+          }
+          100% {
+            background-color:$wave-2;
+          }
+        }
+        @keyframes jumping {
+          0% {
+            transform: translateY(0%);
+          }
+          20% {
+            transform: translateY(400px);
+          }
+          40% {
+            transform: translateY(200px);
+          }
+          60% {
+            transform: translateY(400px);
+          }
+          80% {
+            transform: translateY(300px);
+          }
+          100% {
+            transform: translateY(600px) rotate(360deg);
+            width: 35vmin;
+            height: 10vmin;
+          }
+        }
+      
+        &::after {
+        position:absolute;
+        content:'Адвент-календарь';
+        top:5px;
+        left:36px;
+        font-size: 18px;
+        opacity: 0;
+        }
+      }
   }
   @media (max-width: 480px) {
   .tree { 
@@ -901,14 +1125,14 @@
     height: 50vmin;
     position: absolute;
     transform: translateY(-250%);
-    top: 10vmin;
+    top: 40vmin;
     left: 35vmin;
   }
   .santa {
     width: 50vmin;
     height: 50vmin;
     position: absolute;
-    top: 35vmin;
+    top: 65vmin;
     left: 14vmin;
   }
   .lightrope-tree {
@@ -919,7 +1143,7 @@
   }
     .gift {
       position: absolute;
-      top: 100vmin;
-      right: 20vmin;
+      top: 112vmin;
+      right: 78vmin;
     }
 }
