--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -788,8 +788,8 @@
       top: 69vmin;
       right: 20vmin;
     }
-  }
-  @media (min-width: 992px) and (max-width: 1199px) {
+}
+@media (min-width: 992px) and (max-width: 1199px) {
   .tree { 
     width: 50vmin;
     height: 50vmin;
@@ -868,9 +868,8 @@
       opacity: 0;
       }
     }
-  }
-
-  @media (min-width: 768px) and (max-width: 991px) {
+}
+@media (min-width: 768px) and (max-width: 991px) {
   .tree { 
     width: 50vmin;
     height: 50vmin;
@@ -966,7 +965,7 @@
       }
     }
 }
-  @media (max-width: 767px) {
+@media (max-width: 767px) and (min-width:650px) {
   .tree { 
     width: 50vmin;
       height: 50vmin;
@@ -1045,8 +1044,8 @@
       opacity: 0;
       }
     }
-  }
-  @media(max-width:650px) {
+}
+@media(max-width:650px) and (min-width: 481px) {
       .tree { 
         width: 50vmin;
           height: 50vmin;
@@ -1118,7 +1117,7 @@
         opacity: 0;
         }
       }
-  }
+}
   @media (max-width: 480px) {
   .tree { 
     width: 50vmin;
